--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,25 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.0.2'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10'
+        classpath "org.jlleitschuh.gradle:ktlint-gradle:11.5.0"
+    }
+}
+
 plugins {
-    id 'com.android.application' version '8.0.2' apply false
-    id 'com.android.library' version '8.0.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
+    id "org.jlleitschuh.gradle.ktlint" version "11.5.0"
+    id "org.jetbrains.gradle.plugin.idea-ext" version "0.7"
+}
+
+idea.project.settings {
+    taskTriggers {
+        afterSync tasks.getByName("addKtlintFormatGitPreCommitHook")
+        afterSync tasks.getByName("ktlintApplyToIdea")
+    }
 }
