--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,13 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven {
+            url 'https://maven.google.com'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.0.2'
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.10'
         classpath "org.jlleitschuh.gradle:ktlint-gradle:11.5.0"
     }
 }
