--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'org.jlleitschuh.gradle.ktlint'
 }
 
 android {
@@ -69,15 +68,6 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.3'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.3'
 
-}
-
-ktlint {
-    version.set("0.42.1")
-    enableExperimentalRules.set(false)
-    android.set(true)
-    debug.set(false)
-    verbose.set(false)
-    outputToConsole.set(true)
-    outputColorName.set("RED")
-    //additionalEditorconfigFile = file(".editorconfig")
+    //Google Play Services
+    implementation 'com.google.android.gms:play-services-location:21.3.0'
 }
