--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
     implementation 'androidx.multidex:multidex:2.0.1'
+    implementation "androidx.core:core-splashscreen:1.0.0"
 
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
