feat: add the database and dependency injection foundation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -20,6 +22,7 @@ android {
 
     buildFeatures {
         buildConfig = true
+        viewBinding = true
     }
 
     buildTypes {
@@ -58,6 +61,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation "androidx.core:core-splashscreen:1.0.0"
+    implementation("androidx.room:room-runtime:2.6.1")
+    implementation("androidx.room:room-ktx:2.6.1")
+    implementation("com.google.dagger:hilt-android:2.51.1")
+    kapt "com.google.dagger:hilt-compiler:2.51.1"
 
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -71,4 +78,8 @@ dependencies {
 
     //Google Play Services
     implementation 'com.google.android.gms:play-services-location:21.3.0'
+}
+
+kapt {
+    correctErrorTypes true
 }
