--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
 
 
     <application
+        android:name=".core.MartpApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -19,7 +20,7 @@
         android:theme="@style/Theme.GenerateMapArts"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".scenes.gallery.GalleryActivity"
             android:theme="@style/Theme.App.Starting"
             android:exported="true">
             <intent-filter>
