--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,11 +42,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
 }
 
@@ -65,6 +65,7 @@ dependencies {
     implementation("androidx.room:room-ktx:2.6.1")
     implementation("com.google.dagger:hilt-android:2.51.1")
     kapt "com.google.dagger:hilt-compiler:2.51.1"
+    implementation 'androidx.activity:activity-ktx:1.9.3'
 
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
