--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     implementation "androidx.core:core-splashscreen:1.0.0"
     implementation("androidx.room:room-runtime:2.6.1")
     implementation("androidx.room:room-ktx:2.6.1")
+    kapt "androidx.room:room-compiler:2.6.1"
     implementation("com.google.dagger:hilt-android:2.51.1")
     kapt "com.google.dagger:hilt-compiler:2.51.1"
     implementation 'androidx.activity:activity-ktx:1.9.3'
