--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".scenes.locationAcessDetails.LocationAccessDetailsActivity"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
