--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,10 @@
             android:name=".scenes.locationAcessDetails.LocationAccessDetailsActivity"
             android:exported="true">
         </activity>
+        <activity
+            android:name=".scenes.createNewMapArt.CreateNewMapArtActivity"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
