--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,7 @@
         </activity>
         <activity
             android:name=".scenes.createNewMapArt.CreateNewMapArtActivity"
+            android:windowSoftInputMode="stateVisible"
             android:exported="true">
         </activity>
     </application>
