--- a/build.gradle
+++ b/build.gradle
@@ -10,11 +10,14 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.0.2'
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.10'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:2.1.10'
     }
 }
 
 plugins {
     id "org.jetbrains.gradle.plugin.idea-ext" version "0.7"
     id 'com.google.dagger.hilt.android' version '2.51.1' apply false
+    id 'com.android.application' version '8.1.4' apply false
+    id 'com.google.gms.google-services' version '4.4.2' apply false
+    id 'com.google.firebase.crashlytics' version '3.0.3' apply false
 }
