--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,15 +5,16 @@ plugins {
     id 'com.google.dagger.hilt.android'
     id("com.google.gms.google-services")
     id 'com.google.firebase.crashlytics'
+    id 'org.jetbrains.kotlin.plugin.compose'
 }
 
 android {
     namespace 'manoellribeiro.dev.martp'
-    compileSdk 35
+    compileSdk 36
 
     defaultConfig {
         applicationId "manoellribeiro.dev.martp"
-        minSdk 21
+        minSdk 23
         targetSdk 35
         versionCode 1
         versionName "1.0"
@@ -25,6 +26,7 @@ android {
     buildFeatures {
         buildConfig = true
         viewBinding = true
+        compose = true
     }
 
     buildTypes {
@@ -51,41 +53,57 @@ android {
     kotlinOptions {
         jvmTarget = '17'
     }
+    packagingOptions {
+        exclude 'META-INF/versions/**'
+    }
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.13.1'
-    implementation 'androidx.appcompat:appcompat:1.7.0'
-    implementation 'com.google.android.material:material:1.12.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+    def composeBom = platform('androidx.compose:compose-bom:2025.12.01')
+    implementation composeBom
+    androidTestImplementation composeBom
+    implementation 'androidx.compose.material3:material3'
+    implementation 'androidx.compose.ui:ui-tooling-preview'
+    debugImplementation 'androidx.compose.ui:ui-tooling'
+    implementation 'androidx.compose.material3.adaptive:adaptive'
+    implementation 'androidx.activity:activity-compose:1.12.2'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.10.0'
+    implementation 'androidx.compose.runtime:runtime-livedata'
+
+
+    implementation 'androidx.core:core-ktx:1.17.0'
+    implementation 'androidx.appcompat:appcompat:1.7.1'
+    implementation 'com.google.android.material:material:1.13.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
     implementation files('libs/processing-core.jar')
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation "androidx.core:core-splashscreen:1.0.0"
-    implementation("androidx.room:room-runtime:2.6.1")
-    implementation("androidx.room:room-ktx:2.6.1")
-    kapt "androidx.room:room-compiler:2.6.1"
-    implementation("com.google.dagger:hilt-android:2.51.1")
-    kapt "com.google.dagger:hilt-compiler:2.51.1"
-    implementation 'androidx.activity:activity-ktx:1.9.3'
+    implementation "androidx.core:core-splashscreen:1.2.0"
+    implementation("androidx.room:room-runtime:2.8.4")
+    implementation("androidx.room:room-ktx:2.8.4")
+    kapt "androidx.room:room-compiler:2.8.4"
+    implementation("com.google.dagger:hilt-android:2.57.2")
+    kapt "com.google.dagger:hilt-compiler:2.57.2"
+    implementation 'androidx.activity:activity-ktx:1.12.2'
 
     //Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.11.0'
+    implementation 'com.squareup.retrofit2:retrofit:3.0.0'
+    implementation 'com.squareup.retrofit2:converter-gson:3.0.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.3.2'
 
     //Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.3'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.2'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.10.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.10.0'
 
     //Google Play Services
     implementation 'com.google.android.gms:play-services-location:21.3.0'
 
     //Firebase
-    implementation(platform("com.google.firebase:firebase-bom:33.10.0"))
+    implementation(platform("com.google.firebase:firebase-bom:34.7.0"))
     implementation("com.google.firebase:firebase-crashlytics")
     implementation("com.google.firebase:firebase-analytics")
 }
