--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id("com.google.gms.google-services")
     id 'com.google.firebase.crashlytics'
     id 'org.jetbrains.kotlin.plugin.compose'
+    id "de.mannodermaus.android-junit5" version "1.14.0.0"
 }
 
 android {
@@ -77,9 +78,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.13.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
     implementation files('libs/processing-core.jar')
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation "androidx.core:core-splashscreen:1.2.0"
     implementation("androidx.room:room-runtime:2.8.4")
@@ -106,6 +104,15 @@ dependencies {
     implementation(platform("com.google.firebase:firebase-bom:34.7.0"))
     implementation("com.google.firebase:firebase-crashlytics")
     implementation("com.google.firebase:firebase-analytics")
+
+    //Tests
+    testImplementation 'androidx.arch.core:core-testing:2.2.0'
+    testImplementation "io.mockk:mockk:1.14.7"
+    androidTestImplementation "io.mockk:mockk-android:1.14.7"
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
+    testImplementation "org.junit.jupiter:junit-jupiter-api:6.0.1"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:6.0.1"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.10.2'
 }
 
 kapt {
