chore: add test report to pull request

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -22,3 +22,7 @@ jobs:
 
       - name: Run unit tests
         run: ./gradlew clean testDebug
+
+      - name: Post Test Report
+        uses: asadmansr/android-test-report-action@v1.2.0
+        if: ${{ always() }}
