--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,7 +44,7 @@ jobs:
         uses: chkfung/android-version-actions@v1.2.3
         with:
           gradlePath: app/build.gradle
-          version: ${{ github.run_number + 3 }}
+          version: ${{ github.run_number }}
 
       - name: Assemble Release Bundle
         run: ./gradlew bundleRelease
