--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   test:
     name: Unit Test
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Setup JDK 17
