chore: add gradlew permission

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,6 +47,9 @@ jobs:
           gradlePath: app/build.gradle
           version: ${{ github.run_number }}
 
+      - name: Grant execute permissions for gradlew
+        run: chmod +x gradlew
+
       - name: Assemble Release Bundle
         run: ./gradlew bundleRelease
 
