--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
 
     defaultConfig {
         applicationId "manoellribeiro.dev.martp"
-        minSdk 23
+        minSdk 26
         targetSdk 35
         versionCode 1
         versionName "1.0"
@@ -61,6 +61,8 @@ android {
 
 dependencies {
 
+    implementation("com.google.mlkit:genai-image-description:1.0.0-beta1")
+
     def composeBom = platform('androidx.compose:compose-bom:2025.12.01')
     implementation composeBom
     androidTestImplementation composeBom
@@ -94,6 +96,7 @@ dependencies {
 
     //Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.2'
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-guava:1.10.2")
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.10.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.10.0'
 
